add rtl class to section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
                 <!-- End Site Title -->
 
-                <div class="row">
+                <div class="row RTL">
                         <!-- <div class="col-sm-5 col-xs-12">
                                 <div class="paly-video wow fadeInRight">
                                     <div class="video-bg">
