--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
  <!DOCTYPE html>
-<html lang="zxx">
+<html lang="fa">
     <head>
             <meta charset="utf-8">
             <meta name="description" content="روتینا ارائه دهنده سرویس های مورد نیاز روزمره شما، شامل خدمات صدور، تعویض و تمدید دفترچه بیمه خدمات درمانی، خدمات پرداختی مانند خرید شارژ ، کارت به کارت، سرویس پیک موتوری آنلاین و ...">
@@ -214,6 +214,7 @@
   
                   <li><a href="#download">دانلود</a></li>
                   <li><a href="#services">امکانات</a></li>
+                  <li><a href="rules.html">قوانین و مقررات</a></li>
                 </ul>
               </div>
             </div>
