--- a/index.html
+++ b/index.html
@@ -533,6 +533,7 @@
 
                 <li><a href="#download">دانلود</a></li>
                 <li><a href="#services">امکانات</a></li>
+                <li><a href="rules.html">قوانین و مقررات</a></li>
               </ul>
             </div>
           </div>
