--- a/about.html
+++ b/about.html
@@ -212,8 +212,8 @@
                 <ul>
                   <li><a href="about.html">درباره روتینا</a></li>
   
-                  <li><a href="#download">دانلود</a></li>
-                  <li><a href="#services">امکانات</a></li>
+                  <li><a href="index.html#download">دانلود</a></li>
+                  <li><a href="index.html#services">امکانات</a></li>
                   <li><a href="rules.html">قوانین و مقررات</a></li>
                 </ul>
               </div>
