--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta name="robots" content="index, follow" />
-
+    <meta name="enamad" content="223768"/>
+  
     <!-- Title -->
     <title>پلتفرم آنلاین ارائه خدمات روزمره | روتینا - Routina</title>
 
