--- a/index.html
+++ b/index.html
@@ -530,10 +530,11 @@
             <div class="footer-widget">
               <ul>
                 <li><a href="about.html">درباره روتینا</a></li>
-
-                <li><a href="#download">دانلود</a></li>
-                <li><a href="#services">امکانات</a></li>
+                <li><a href="index.html#download">دانلود</a></li>
+                <li><a href="index.html#services">امکانات</a></li>
                 <li><a href="rules.html">قوانین و مقررات</a></li>
+             
+                <li><a href="feedback.html">انتقادات و پیشنهادات</a></li>
               </ul>
             </div>
           </div>
@@ -579,7 +580,8 @@
                 <img src="assets/img/footer-logo.png" alt="" />
               </div>
               <p> 
-			  آدرس: تهران، خیابان دکتر شریعتی، بالاتر از سه را پلیس، نبش زیتون، مجتمع مروارید، بلوک جنوبی - واحد 9
+               آدرس: تهران، خیابان دکتر شریعتی، بالاتر از سه را پلیس، نبش زیتون، مجتمع مروارید، بلوک جنوبی - واحد 9   - 
+               کد پستی : ۱۵۶۵۶۱۵۵۱۵
               </p>
               <span> info[at]routina.app<strong> :ایمیل</strong></span
               ><br />
