--- a/rules.html
+++ b/rules.html
@@ -586,10 +586,11 @@ embed'><b><span lang=FA
           <div class="footer-widget">
             <ul>
               <li><a href="about.html">درباره روتینا</a></li>
-
               <li><a href="index.html#download">دانلود</a></li>
               <li><a href="index.html#services">امکانات</a></li>
               <li><a href="rules.html">قوانین و مقررات</a></li>
+           
+              <li><a href="feedback.html">انتقادات و پیشنهادات</a></li>
             </ul>
           </div>
         </div>
@@ -598,7 +599,9 @@ embed'><b><span lang=FA
             <div class="download-app-btn">
               <ul>
                 <li>
-                  <a href="dl/routina-v1.0.0.apk"><img src="assets/img/direct.png" alt="" /></a>
+                  <a href="dl/routina-v1.0.0.apk"
+                    ><img src="assets/img/direct.png" alt=""
+                  /></a>
                 </li>
               </ul>
             </div>
@@ -632,10 +635,12 @@ embed'><b><span lang=FA
             <div class="footer-logo">
               <img src="assets/img/footer-logo.png" alt="" />
             </div>
-            <p>
-              آدرس: تهران، خیابان دکتر شریعتی، بالاتر از سه را پلیس، نبش زیتون، مجتمع مروارید، بلوک جنوبی - واحد 9
+            <p> 
+             آدرس: تهران، خیابان دکتر شریعتی، بالاتر از سه را پلیس، نبش زیتون، مجتمع مروارید، بلوک جنوبی - واحد 9   - 
+             کد پستی : ۱۵۶۵۶۱۵۵۱۵
             </p>
-            <span> info[at]routina.app<strong> :ایمیل</strong></span><br />
+            <span> info[at]routina.app<strong> :ایمیل</strong></span
+            ><br />
             <span> 021-88419726-88419796<strong> :تلفن</strong></span>
             <br />
             <span> 021-88428635<strong> :فکس</strong></span>
