add detail for namad

--- a/feedback.html
+++ b/feedback.html
@@ -269,7 +269,7 @@
                آدرس: تهران، خیابان دکتر شریعتی، بالاتر از سه را پلیس، نبش زیتون، مجتمع مروارید، بلوک جنوبی - واحد 9   - 
                کد پستی : ۱۵۶۵۶۱۵۵۱۵
               </p>
-              <span> info[at]routina.app<strong> :ایمیل</strong></span
+              <span>  Routina.Yota[at]gmail.com<strong> :ایمیل</strong></span
               ><br />
               <span> 021-88419726-88419796<strong> :تلفن</strong></span>
               <br />
