correct responsive view

--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
                                     <div class="single-feature wow fadeInReft"  style="color:white;">
                                       <!-- <img src="assets/img/head.png"> -->
                                         <h3 ><i class="fa fa-information text-center  fa-lg icon-orange-gradientf " ></i>  درباره روتینا </h3>
-                                    <p class="text-justify  " style="color:white; line-height: 2.5em; width: 90%" > 
+                                    <p class="text-justify  " style="color:white; line-height: 2.5em; " > 
                                         زندگی روزمره ما با حجم زیادی از فعالیت های روزمره گره خورده است که به دلیل شلوغی شهرها ، مشغله زیاد و هزینه های فراوان مشکلاتی را برای ما به وجود آورده است. روتینا پلتفرمی خلاقانه و کاربردی است که با هدف آسان کردن روند انجام کارهای روزمره از قبیل خدمات پرداختی ( خرید شارژ اعتباری تلفن همراه ، امکان انتقال پول ، پرداخت قبض ، کیف پول الکترونیک و ... ) ، خدمات پیک و دلیوری ، خدمات بیمه ای ( شامل صدور، تعویض و تمدید دفترچه های خدمات درمانی تامین اجتماعی) و خرید کالاهای مصرفی ( شامل پوشاک ، کیف کفش و زیورآلات ، لوازم آرایشی بهداشتی و سلامتی ، لوازم مربوط به خانه و آشپزخانه ، کالاهای دیجیتال و الکترونیک ، محصولات و کالاهای فرهنگی و هنری و مواد مصرفی و سوپرمارکتی ) در سال  1397 توسط شرکت یکتا وادی ایرانیان (یوتا) آغاز به کار نموده است. 
                                         همچنین روتینا بستری است برای افرادی که می توانند با توجه به موقعیت شغلی خود خدماتی را به دیگر مشتریان ارائه دهند. فروشندگانی که به دنبال بستری برای فروش آنلاین محصولات خود می باشند و سرویس دهندگانی که زیرساخت ارائه خدماتی مانند پیک موتور   ی و ... را دارند.
                                         
