--- a/index.html
+++ b/index.html
@@ -551,20 +551,14 @@
               </div>
               <div class="social-links">
                 <ul>
-                  <li>
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <li>
+                    <a href="https://www.instagram.com/routina_app/"><i class="fa fa-instagram"></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="https://plus.google.com/108066997989660993176"><i class="fa fa-google-plus"></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/company/routina/"><i class="fa fa-linkedin"></i></a>
                   </li>
                 </ul>
               </div>
