--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               </li>
 
               <!-- <li><a href="#contact" data-scroll-nav="7">عضویت</a></li> -->
-              <li><a href="#about" data-scroll-nav="4">چشم‌انداز</a></li>
+              <!-- <li><a href="#about" data-scroll-nav="4">چشم‌انداز</a></li> -->
               <li><a href="#services" data-scroll-nav="3">مزایا</a></li>
               <li><a href="#download" data-scroll-nav="2">دانلود</a></li>
               <li><a href="#feature" data-scroll-nav="1">خدمات</a></li>
