--- a/rules.html
+++ b/rules.html
@@ -92,7 +92,7 @@
             </li>
 
             <!-- <li><a href="#contact" data-scroll-nav="7">عضویت</a></li> -->
-            <li><a href="index.html#about">چشم‌انداز</a></li>
+            <!-- <li><a href="index.html#about">چشم‌انداز</a></li> -->
             <li><a href="index.html#services">مزایا</a></li>
             <li><a href="index.html#download">دانلود</a></li>
             <li><a href="index.html#feature">خدمات</a></li>
